--- a/index.html
+++ b/index.html
@@ -1,7 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-ch">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<title>极简搜索&导航</title>
+<link rel="stylesheet" type="text/css" href="my.css">
+<div id="container" >
+<a href="http://weibo.com/2942728234">
+<div class="yi">yi</div>
+<div class="qi">qi</div>
+<div class="ok">ok</div>
+</a>
+</div>
+<script>
+    function check(v) {
+      switch(v) {
+        case "zhihu":
+          document.getElementById("searchAction").action="http://www.zhihu.com/search";
+          document.getElementById("searchName").name="q";
+          break;
+        case "guoke":
+          document.getElementById("searchAction").action="http://www.guokr.com/search/all";
+          document.getElementById("searchName").name="wd";
+          break;
+        case "bole":
+          document.getElementById("searchAction").action="http://blog.jobbole.com";
+          document.getElementById("searchName").name="s";
+          break;
+        case "wiki":
+          document.getElementById("searchAction").action="http://zh.wikipedia.org/w/index.php";
+          document.getElementById("searchName").name="search";
+          break;
+        case "segmentfault":
+          document.getElementById("searchAction").action="http://segmentfault.com/search";
+          document.getElementById("searchName").name="q";
+          break;
+        case "21th":
+          document.getElementById("searchAction").action="http://search.21so.com/";
+          document.getElementById("searchName").name="query";
+          break;
+      }
+    }
+  </script>
+</head>
 <body>
+<div id="bodydiv">
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.by yiqiok</p>
+<div id="main">
+    <form>
+      <input type="radio" name="zs" value="zhihu" onclick="check(this.value)" />知乎&nbsp;
+      <input type="radio" name="zs" value="guoke" onclick="check(this.value)" />果壳&nbsp;
+      <input type="radio" name="zs" value="bole" onclick="check(this.value)" />伯乐在线&nbsp;
+      <input type="radio" name="zs" value="wiki" onclick="check(this.value)" />维基百科&nbsp;
+      <input type="radio" name="zs" value="segmentfault" onclick="check(this.value)" />SegmentFault&nbsp;
+      <input type="radio" name="zs" value="21th" onclick="check(this.value)" />21世纪网&nbsp;
+      <br/>
+      <br/>
+    </form>
+    <form id="searchAction" name="searchForm" action="http://www.zhihu.com/search" method="get" target="_blank">
+      <input id="searchName" class="question" name="q" type="question" />
+      <br />
+      <input class="push" type="submit" value="知识搜索" />
+      <input class="push" type="submit" value="手气不错" />
+    </form>
+  <br />
+
+<script>
+    if(document.forms.searchForm.q.value == "") {
+      document.forms.searchForm.q.focus();
+    }
+  </script>
+  </div>
+  </div>
+  <div id="footer" >
+  <a  href="http://weibo.com/2942728234" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
+  </div>
+  
 </body>
+
 </html>
