--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <title>极简搜索&导航</title>
 <link rel="stylesheet" type="text/css" href="my.css">
 <div id="container" >
-<a href="http://weibo.com/2942728234">
+<a href="http://weibo.com/2942728234" target="_blank">
 <div class="yi">yi</div>
 <div class="qi">qi</div>
 <div class="ok">ok</div>
@@ -25,25 +25,25 @@
           document.getElementById("searchAction").action="http://www.zhihu.com/search";
           document.getElementById("searchName").name="q";
           break;
-        case "guoke":
-          document.getElementById("searchAction").action="http://www.guokr.com/search/all";
+        case "baidu":
+          document.getElementById("searchAction").action="http://www.baidu.com/s";
           document.getElementById("searchName").name="wd";
           break;
-        case "bole":
-          document.getElementById("searchAction").action="http://blog.jobbole.com";
-          document.getElementById("searchName").name="s";
-          break;
-        case "wiki":
-          document.getElementById("searchAction").action="http://zh.wikipedia.org/w/index.php";
-          document.getElementById("searchName").name="search";
-          break;
-        case "segmentfault":
-          document.getElementById("searchAction").action="http://segmentfault.com/search";
+        case "bing":
+          document.getElementById("searchAction").action="http://cn.bing.com/search";
           document.getElementById("searchName").name="q";
           break;
-        case "21th":
-          document.getElementById("searchAction").action="http://search.21so.com/";
-          document.getElementById("searchName").name="query";
+        case "wiki":
+          document.getElementById("searchAction").action="http://en.wikipedia.org/w/index.php";
+          document.getElementById("searchName").name="search";
+          break;
+        case "cnblogs":
+          document.getElementById("searchAction").action="http://zzk.cnblogs.com/s";
+          document.getElementById("searchName").name="w";
+          break;
+        case "weibo":
+          document.getElementById("searchAction").action="http://s.weibo.com/weibo";
+          document.getElementById("searchName").name="search";
           break;
       }
     }
@@ -51,23 +51,24 @@
 </head>
 <body>
 <div id="bodydiv">
-<h1>Hello World</h1>
+<h1 class="title">easySearch</h1>
+</br>
+
 <div id="main">
-    <form>
-      <input type="radio" name="zs" value="zhihu" onclick="check(this.value)" />知乎&nbsp;
-      <input type="radio" name="zs" value="guoke" onclick="check(this.value)" />果壳&nbsp;
-      <input type="radio" name="zs" value="bole" onclick="check(this.value)" />伯乐在线&nbsp;
+    <form>      
+      <input type="radio" name="zs" value="bing" onclick="check(this.value)" />必应&nbsp;
+	  <input type="radio" name="zs" value="baidu" onclick="check(this.value)" />百度&nbsp;
       <input type="radio" name="zs" value="wiki" onclick="check(this.value)" />维基百科&nbsp;
-      <input type="radio" name="zs" value="segmentfault" onclick="check(this.value)" />SegmentFault&nbsp;
-      <input type="radio" name="zs" value="21th" onclick="check(this.value)" />21世纪网&nbsp;
+	  <input type="radio" name="zs" value="zhihu" onclick="check(this.value)" />知乎&nbsp;
+      <input type="radio" name="zs" value="cnblogs" onclick="check(this.value)" />博客园&nbsp;
+      <input type="radio" name="zs" value="weibo" onclick="check(this.value)" />微博&nbsp;
       <br/>
       <br/>
     </form>
-    <form id="searchAction" name="searchForm" action="http://www.zhihu.com/search" method="get" target="_blank">
-      <input id="searchName" class="question" name="q" type="question" />
-      <br />
-      <input class="push" type="submit" value="知识搜索" />
-      <input class="push" type="submit" value="手气不错" />
+    <form id="searchAction" name="searchForm" action="http://cn.bing.com/search" method="get" target="_blank">
+      <input id="searchName" class="question" name="q" type="question" />      
+      <input class="push" type="submit" value="GO" />
+     
     </form>
   <br />
 
@@ -79,7 +80,7 @@
   </div>
   </div>
   <div id="footer" >
-  <a  href="http://weibo.com/2942728234" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
+  <a  href="http://weibo.com/2942728234" target="_blank" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
   </div>
   
 </body>
