--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<title>极简搜索&导航</title>
+<title>极简搜索</title>
 <link rel="stylesheet" type="text/css" href="my.css">
 <div id="container" >
 <a href="http://weibo.com/2942728234" target="_blank">
@@ -48,14 +48,17 @@
       }
     }
   </script>
+  </br>
+  </br>
+  
 </head>
 <body>
 <div id="bodydiv">
-<h1 class="title">easySearch</h1>
+<div class="title">easySo</div>
 </br>
 
 <div id="main">
-    <form>      
+    <form >      
       <input type="radio" name="zs" value="bing" onclick="check(this.value)" />必应&nbsp;
 	  <input type="radio" name="zs" value="baidu" onclick="check(this.value)" />百度&nbsp;
       <input type="radio" name="zs" value="wiki" onclick="check(this.value)" />维基百科&nbsp;
@@ -79,6 +82,21 @@
   </script>
   </div>
   </div>
+  </br>
+  </br>
+   </br>
+    </br>
+	 </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	  </br>
+	
   <div id="footer" >
   <a  href="http://weibo.com/2942728234" target="_blank" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
   </div>
