--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<title>极简搜索</title>
+<title>easySo</title>
 <link rel="stylesheet" type="text/css" href="my.css">
 <div id="container" >
 <a href="http://weibo.com/2942728234" target="_blank">
