--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <title>easySo</title>
 <link rel="stylesheet" type="text/css" href="my.css">
 <div id="container" >
-<a href="http://weibo.com/2942728234" target="_blank">
+<a href="http://yiqiok.cn" target="_blank">
 <div class="yi">yi</div>
 <div class="qi">qi</div>
 <div class="ok">ok</div>
