--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
     function check(v) {
       switch(v) {
         case "zhihu":
-          document.getElementById("searchAction").action="http://www.zhihu.com/search";
+          document.getElementById("searchAction").action="https://www.zhihu.com/search";
           document.getElementById("searchName").name="q";
           break;
         case "baidu":
-          document.getElementById("searchAction").action="http://www.baidu.com/s";
+          document.getElementById("searchAction").action="https://www.baidu.com/s";
           document.getElementById("searchName").name="wd";
           break;
         case "bing":
-          document.getElementById("searchAction").action="http://cn.bing.com/search";
+          document.getElementById("searchAction").action="//cn.bing.com/search";
           document.getElementById("searchName").name="q";
           break;
         case "wiki":
-          document.getElementById("searchAction").action="http://en.wikipedia.org/w/index.php";
+          document.getElementById("searchAction").action="//en.wikipedia.org/w/index.php";
           document.getElementById("searchName").name="search";
           break;
         case "cnblogs":
-          document.getElementById("searchAction").action="http://zzk.cnblogs.com/s";
+          document.getElementById("searchAction").action="//zzk.cnblogs.com/s";
           document.getElementById("searchName").name="w";
           break;
         case "weibo":
-          document.getElementById("searchAction").action="http://s.weibo.com/weibo";
+          document.getElementById("searchAction").action="//s.weibo.com/weibo";
           document.getElementById("searchName").name="search";
           break;
       }
@@ -69,7 +69,7 @@
       <br/>
       <br/>
     </form>
-    <form id="searchAction" name="searchForm" action="http://cn.bing.com/search" method="get" target="_blank">
+    <form id="searchAction" name="searchForm" action="//cn.bing.com/search" method="get" target="_blank">
       <input id="searchName" class="question" name="q" type="question" />      
       <input class="push" type="submit" value="GO" />
      
@@ -99,7 +99,7 @@
 	  </br>
 	
   <div id="footer" >
-  <a  href="http://weibo.com/2942728234" target="_blank" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
+  <a  href="//weibo.com/2942728234" target="_blank" style="font-family:arial;text-decoration: none;txt-decoration:underline; text-align:center">&copyyiqiok </a> 
   </div>
   
 </body>
